--- a/Wine_PCA.ipynb
+++ b/Wine_PCA.ipynb
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "wine = pd.read_csv(\"G:/ExcelR_Data/Data_Science_Course/Assignments/PCA/wine.csv\")\n",
+    "wine = pd.read_csv(\"PCA/wine.csv\")\n",
     "wine.head()"
    ]
   },
